--- a/Portfolo/index.html
+++ b/Portfolo/index.html
@@ -110,7 +110,7 @@
                             01/06/2022-1-02-2023 <br>
                             FreeCodeCamp. <br>
                             W3Schools<br>
-                            <a href="#">Visit my youtube Channel</a>
+                            <a href="https://www.youtube.com/channel/UCd_8APf4P_IppeIMhtNzwYg" target="_blank">Visit my youtube Channel</a>
                         </li>
                     
                      </ol>
